Import of JAW/Chart-Strip-1.03 from CPAN.
gitpan-cpan-distribution: Chart-Strip
gitpan-cpan-version:      1.03
gitpan-cpan-path:         JAW/Chart-Strip-1.03.tar.gz
gitpan-cpan-author:       JAW
gitpan-cpan-maturity:     released

--- a/eg/index.html
+++ b/eg/index.html
@@ -5,6 +5,8 @@
 <IMG SRC="ex1.png"><P>
 <IMG SRC="ex2.png"><P>
 <IMG SRC="ex3.png"><P>
+<IMG SRC="ex4.png"><P>
+<IMG SRC="ex5.png"><P>
 
 </BODY>
 </HTML>
